<resources>
    <string name="app_name">What2Eat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="about">About</string>
    <string name="my_meals">My meals</string>
    <string name="add_new_meal">Add new meal</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="name">name</string>
    <string name="meal_parts">Meal parts</string>
    <string name="cannot_be_empty">Can\'t be empty</string>
    <string name="added">added</string>

    <string name="rating">Rating:</string>
    <string name="rating0">None</string>
    <string name="rating1">Very poor</string>
    <string name="rating2">Poor</string>
    <string name="rating3">Fair</string>
    <string name="rating4">Good</string>
    <string name="rating5">Excellent</string>
    <string name="delete_all_meals">Delete all meals</string>
    <string name="deletedAllMeals">Deleted all meals</string>
    <string name="confirmation_delete_title">Are you sure?</string>
    <string name="confirmation_delete_content">By hitting OK you will permanently delete all your saved meals</string>
    <string name="confirmation_delete_meal_content">By hitting OK you will permanently delete this meal</string>
    <string name="confirmation_delete_mealpart_content">By hitting OK you will permanently delete this mealpart</string>
    <string name="meal">Meal</string>
    <string name="last_eaten">Last eaten:</string>
    <string name="not_eaten_yet">Not eaten yet</string>
    <string name="ok">OK</string>
    <string name="date_added">Date added</string>
    <string name="edit_meal">Edit meal</string>
    <string name="delete_meal">Delete meal</string>
    <string name="my_meal">My meal</string>

    <string name="rating_string_format">Rating: %s</string>
    <string name="edited">edited</string>
    <string name="deleted">deleted</string>
    <string name="no_mealparts_available">No mealparts available</string>
    <string name="add_mealpart">Add mealpart</string>
    <string name="meal_part">Meal part</string>
    <string name="remove">remove</string>
    <string name="my_meal_parts">My meal parts</string>
    <string name="delete_mealpart">Delete mealpart</string>
    <string name="mealpart_name">Mealpart name</string>
    <string name="no_mealparts_selected">No mealparts selected</string>
    <string name="no_meals_available">No meals available</string>
    <string name="take_picture_icon">Take picture icon</string>
    <string name="delete_picture_icon">Delete picture icon</string>
    <string name="no_items_available">No items available</string>
    <string name="no_items_search">No meals found within this search</string>
    <string name="found_in_meals">Found in meals</string>
    <string name="loading_items">Loading items</string>
    <string name="no_connection">No connection</string>
    <string name="find_online_inspiration">Find online insipiration</string>
    <string name="ingredients">Ingredients</string>
    <string name="visit_website">Visit recipe website</string>
    <string name="welcome_text">
        Welcome to the What2Eat app.\n
        In this application you can organize your own mealparts (like patato\'s, meat, chicken,…).
        You can add, remove or edit your own mealparts. You can even look for online inspiration
        based on your selected mealpart.\n\n
        When you have filled your mealparts repository you can use these mealparts to arrange your meals.
        Also here you can add, remove or edit meals. You can even take a picture of your meal to save
        a visual representation. \n\n
        By linking mealparts to certain meals, the linked meals will be visible in the mealpart detail
        window.\n\n
        If you don\'t know what meal to prepare, you can check out your own meal repository organized in
        this application.\n\n
        I hope you enjoy using What2Eat!
    </string>

    <string name="go_to_my_meals">Go to my meals</string>
    <string name="go_to_my_mealparts">Go to my mealparts</string>
    <string name="about_text">
        The What2Eat is created by Nick Gysels\n
        Student Applied Computer Sciences\n
        HoGent, Belgium\n
        Native Apps I - Android mobile applications\n
        nick.gysels.w2819@student.hogent.be
    </string>
    <string name="my_meal_part">My meal part</string>
    <string name="recipe">Recipe</string>
    <string name="recipes">Recipes</string>
    <string name="search">Search</string>
    <string name="loading_recipes">Loading recipes</string>
    <string name="no_recipes_search">No recipes found with this mealpart as ingredient</string>
</resources>
