<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/welcomeFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="android.com.what2eat.fragments.WelcomeFragment"
        android:label="@string/welcome" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="android.com.what2eat.fragments.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/maaltijdOverzichtFragment"
        android:name="android.com.what2eat.fragments.MaaltijdOverzichtFragment"
        android:label="@string/my_meals" >
        <action
            android:id="@+id/action_maaltijdOverzichtFragment_to_addMaaltijdActivity"
            app:destination="@id/addMaaltijdActivity" />
    </fragment>
    <activity
        android:id="@+id/addMaaltijdActivity"
        android:name="android.com.what2eat.activities.AddMaaltijdActivity"
        android:label="AddMaaltijdActivity" />
</navigation>