<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="maaltijd"
            type="android.com.what2eat.viewmodels.MaaltijdDetailViewModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.MaaltijdEditFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/maaltijd_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/meal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/dish" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/maaltijd_image">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/maaltijd_naam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    tools:text="Maaltijd naam"
                    app:maaltijd_edit_naam="@{maaltijd.maaltijd}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/rating_parent"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:maaltijd_rating="@{maaltijd.maaltijd}">

                <ImageView
                    android:id="@+id/maaltijd_rating1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/mini_margin"
                    android:layout_weight="1"
                    android:contentDescription="@string/rating1"
                    app:srcCompat="@android:drawable/star_big_off"
                    android:onClick="@{() -> maaltijd.setRating(1)}"/>

                <ImageView
                    android:id="@+id/maaltijd_rating2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/mini_margin"
                    android:layout_weight="1"
                    android:contentDescription="@string/rating2"
                    app:srcCompat="@android:drawable/star_big_off"
                    android:onClick="@{() -> maaltijd.setRating(2)}"/>

                <ImageView
                    android:id="@+id/maaltijd_rating3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/mini_margin"
                    android:layout_weight="1"
                    android:contentDescription="@string/rating3"
                    app:srcCompat="@android:drawable/star_big_off"
                    android:onClick="@{() -> maaltijd.setRating(3)}"/>

                <ImageView
                    android:id="@+id/maaltijd_rating4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/mini_margin"
                    android:layout_weight="1"
                    android:contentDescription="@string/rating4"
                    app:srcCompat="@android:drawable/star_big_off"
                    android:onClick="@{() -> maaltijd.setRating(4)}"/>

                <ImageView
                    android:id="@+id/maaltijd_rating5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/mini_margin"
                    android:layout_weight="1"
                    android:contentDescription="@string/rating5"
                    app:srcCompat="@android:drawable/star_big_off"
                    android:onClick="@{() -> maaltijd.setRating(5)}"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:text="@string/rating" />

                <TextView
                    android:id="@+id/rating_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    app:maaltijd_ratingString="@{maaltijd.maaltijd}"
                    tools:text="Excellent" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_meal_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/delete_meal"
                app:backgroundTint="#F44336"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_meal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/baseline_check_black_48" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>